# SoundX

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.claude/ecc/: install-state.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-10-plan1-skeleton-wavetable-engine.md  2026-06-10-plan2a-granular-sample-import.md  2026-06-10-plan2b-spectral-engine.md  2026-06-10-plan3a-dual-slots-morph.md  2026-06-11-plan3b-modulation.md  2026-06-11-plan4-fx-rack.md  2026-06-11-plan5-harmonic-orbits.md  2026-06-11-plan6-presets-factory.md
docs/superpowers/specs/: 2026-06-10-soundx-synth-design.md
factory/: generate_presets.py  test_generate_presets.py
plugin/: CMakeLists.txt  OrbitView.cpp  OrbitView.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  SynthVoice.h
plugin/engine/: Adsr.h  Fft.h  GranularVoice.h  Lfo.h  PitchDetector.h  Rng.h  SampleData.h  SampleImporter.h  SoundSource.h  SpectralModel.h  SpectralVoice.h  Wavetable.h  WavetableOscillator.h  WavetableVoice.h
plugin/engine/analysis/: Consonance.h
plugin/engine/effects/: Chorus.h  Distortion.h  MultibandComp.h  Reverb.h  StereoDelay.h
presets/factory/: 00_Init.soundxpreset  01_Glass_Pad.soundxpreset  02_Neon_Pluck.soundxpreset  03_Saw_Stack.soundxpreset  04_Morph_Drift.soundxpreset  05_Deep_Bass.soundxpreset  06_Shimmer_Keys.soundxpreset  07_Wobble_Bass.soundxpreset  08_Slow_Bloom.soundxpreset  09_Radio_Harsh.soundxpreset  10_Grain_Cloud_drop_sample.soundxpreset  11_Spectra_Freeze_drop_sample.soundxpreset  12_Tape_Chorus.soundxpreset  13_Cathedral.soundxpreset
scripts/: check_gpu.py
tests/: CMakeLists.txt
tests/engine/: AdsrTests.cpp  ConsonanceTests.cpp  EffectsTests.cpp  GranularTests.cpp  ImporterTests.cpp  LfoTests.cpp  OscillatorTests.cpp  PitchDetectorTests.cpp  SpectralTests.cpp  VoiceTests.cpp  WavetableTests.cpp
tests/plugin/: RenderTests.cpp
