[project]
name = "soundx"
version = "0.1.0"
description = "SoundX - GPU-accelerated audio application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "torchaudio>=2.7",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
